# spr

./: AGENTS.md  Cargo.toml  FORK.md  README.md  renovate.json
.github/workflows/: release.yml  test.yml
skills/stacked-prs/: SKILL.md
src/: branch.rs  config.rs  error.rs  forge.rs  git.rs  git_remote.rs  github.rs  lib.rs  main.rs  message.rs  output.rs  stack.rs  test_helpers.rs  token.rs  utils.rs
src/commands/: amend.rs  check.rs  close.rs  diff.rs  format.rs  init.rs  land.rs  list.rs  mod.rs  patch.rs  status.rs  sync.rs
src/forge/: dry_run.rs  mod.rs  verbose.rs
src/gql/: pullrequest_query.graphql
