[package]
name = "spr"
version = "1.3.8-beta.1"
authors = ["Sven Over <sp@cedenti.st>", "Jozef Mokry <jozef.mokry@gmail.com>"]
description = "Submit pull requests for individual, amendable, rebaseable commits to GitHub"
repository = "https://github.com/spacedentist/spr"
homepage = "https://github.com/spacedentist/spr"
license = "MIT"
edition = "2024"
exclude = [".github", ".gitignore"]

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
clap = { version = "^4.5.47", features = ["derive", "wrap_help"] }
color-eyre = "0.6.5"
console = "^0.16.1"
dialoguer = "^0.12.0"
env_logger = "0.11.8"
futures = "^0.3.31"
futures-lite = "^2.6.1"
git2 = { version = "^0.20.2", default-features = false, features = ["https"]}
git2-ext = "^0.6.3"
graphql_client = "^0.14.0"
http = "1.3.1"
http-body = "1.0.1"
indoc = "^2.0.6"
lazy-regex = "^3.4.1"
log = "0.4.28"
openssl = { version = "0.10", features = ["vendored"] }
octocrab = { version = "^0.45.0", default-features = false, features = ["rustls", "default-client", "tokio"] }
hyper-rustls = { version = "0.27", features = ["rustls-native-certs", "http1", "tls12", "native-tokio", "ring"] }
open = "5.3.2"
secrecy = { version = "0.10.3", default-features = false }
serde = "^1.0.225"
textwrap = "^0.16.2"
tokio = { version = "^1.47.1", features = ["macros", "rt", "time"] }
unicode-normalization = "^0.1.24"

[dev-dependencies]
tempfile = "3.15.0"
unimock = { version = "0.6.8", features = ["fragile"] }

# Config for cargo-dist (binary distribution)
[package.metadata.dist]
# CI to generate
ci = "github"
# Target platforms
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
]
# Installers to generate
installers = ["shell"]
